<resources>
    <string name="app_name">MyScores</string>
    <!-- Strings related to login activity -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmassao">Password (Confirmação)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to profile activity -->
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings related to main activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="text_registar">Ainda não está registado?</string>
    <string name="action_register">Registar</string>

    <!-- Strings related to register activity -->
    <string name="text_login">Já está registado?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_nacionalidade">Nacionalidade</string>
    <string name="prompt_dataDeNascimento">Data de Nascimento</string>
    <string name="text_instrucao_registo">Preencha os seguintes campos para efetuar o seu registo:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to main activity -->

</resources>
